# NppBplistPlugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appveyor.yml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: CI_build.yml
NppPlistPlugin/: NppPlistPlugin.sln  post-build push.cmd
NppPlistPlugin/dependencies/libimobiledevice/libcnary/: libcnary.vcxproj
NppPlistPlugin/dependencies/libimobiledevice/libplist/: libplist.vcxproj
NppPlistPlugin/dependencies/libimobiledevice/vendors/libiconv/: libiconv.vcxproj
NppPlistPlugin/src/: BplistMngr.cpp  BplistMngr.h  NppPlistPlugin.vcxproj  NppPlistPlugin.vcxproj.filters  NppPluginDemo.cpp  PlistMngr.cpp  PlistMngr.h  PluginDefinition.cpp  PluginDefinition.h  defines.h  rsrc.rc
sample/: sample.plist
src/: LICENSE
src/NppBplistPlugin/: NppBplistPlugin.sln  post-build push.cmd
src/NppBplistPlugin/dependencies/libimobiledevice/libcnary/: libcnary.vcxproj
src/NppBplistPlugin/dependencies/libimobiledevice/libplist/: libplist.vcxproj
src/NppBplistPlugin/dependencies/libimobiledevice/libplist/src/: bplist.c
src/NppBplistPlugin/dependencies/libimobiledevice/vendors/libiconv/: libiconv.vcxproj
src/NppBplistPlugin/dependencies/libimobiledevice/vendors/libxml/: config.h  libxml2.vcxproj
src/NppBplistPlugin/dependencies/libimobiledevice/vendors/libxml/src/libxml/: xmlversion.h
src/NppBplistPlugin/src/: AboutWnd.cpp  AboutWnd.h  BplistMngr.cpp  BplistMngr.h  CMakeLists.txt  NppBplistPlugin.vcxproj  NppBplistPlugin.vcxproj.filters  NppPluginMain.cpp  PlistMngr.cpp  PlistMngr.h  PluginDefinition.cpp  PluginDefinition.h  PluginInterface.h  Resource.h  dialogs.aps  dialogs.rc  rsrc.rc
src/NppPlistPlugin/: NppPlistPlugin.sln  post-build push.cmd
src/NppPlistPlugin/dependencies/libimobiledevice/libcnary/: libcnary.vcxproj
src/NppPlistPlugin/dependencies/libimobiledevice/libplist/: libplist.vcxproj
src/NppPlistPlugin/src/: BplistMngr.cpp  NppPlistPlugin.vcxproj  NppPlistPlugin.vcxproj.filters  NppPluginMain.cpp  PlistMngr.cpp  PluginDefinition.cpp  rsrc.rc
vcpkg/vcpkg-registry/ports/libplist/: CMakeLists.txt  portfile.cmake
vcpkg/vcpkg-registry/versions/: baseline.json
vcpkg/vcpkg-registry/versions/l-/: libplist.json
